--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "material-design-icons-iconfont": "6.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
+    "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
